--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Play:wght@400;700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
   margin: 0;
@@ -8,7 +8,7 @@
 
 html {
   font-size: 16px;
-  font-family: "Roboto Flex", sans-serif;
+  font-family: "Roboto";
 }
 
 body {
@@ -61,13 +61,13 @@ body {
 }
 
 .converter-form .form-group .form-input {
-  padding: 10px;
   font-size: 1.2rem;
+  font-weight: 900;
   border-radius: 5px;
   outline: none;
   border: none;
   color: rgb(12, 12, 122);
-  padding: 0 5px;
+  padding: 0 10px;
   min-height: 48px;
   background: rgba(255, 220, 255, 0.9);
 }
@@ -89,7 +89,8 @@ body {
 }
 
 .form-currency-group .currency-select img {
-  width: 25px;
+  height: 25px;
+  margin-right: 5px;
 }
 
 .form-currency-group .currency-select .currency-dropdown {
@@ -98,10 +99,6 @@ body {
   background: none;
   color: rgb(12, 12, 122);
   font-size: 1.2rem;
-  font-weight: 200;
-}
-
-.form-currency-group .currency-select .currency-dropdown option {
   font-weight: 800;
 }
 
@@ -136,7 +133,7 @@ body {
 }
 
 .submit-button:hover {
-  background: rgb(161, 25, 161);
+  background: rgb(140, 24, 160);
   transform: scale(1.03);
 }
 
@@ -147,5 +144,7 @@ body {
   text-align: center;
   background: rgba(255, 255, 255, 0.1);
   padding: 14px;
-  border: 1px solid rgba(0, 255, 255, 0.5);
+  border: 3px solid rgba(0, 255, 255, 0.5);
+  color: aqua;
+  border-radius: 5px;
 }
